handling multiple bookings at same time, added rate limiting for apis, deployed the code on heruko